# pyplos

./: README.md  pyproject.toml
src/pyplos/: __init__.py  __main__.py  ast.py  parser.py  token.py  util.py
test/: test_bool.py  test_ppl.py
