[project]
name = "pyplos"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jasper Zschiegner", email = "schjaspe@amazon.de" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.289",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pyplos = 'pyplos.__main__:cli'
